# xiaozhi-linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bringup/: CMakeLists.txt  main.cc  multiple.cc
bringup/config/: xiaozhi.json
bringup/include/: interface.h  multiple.h
cmake/: build_for_cv181x.cmake  build_for_d1x.cmake  build_for_mingw.cmake  build_for_t113.cmake  build_for_v831.cmake
control_center/: CMakeLists.txt  README.md  cfg.h  control_center.cpp  syspower.cpp  syspower.h  websocket_client.cpp
gui/: CMakeLists.txt  lv_conf.h  main.c
gui/lv_100ask_xz_ai/src/: lv_100ask_xz_ai_main.h
gui/lvgl/env_support/cmake/: custom.cmake
sound_app/: CMakeLists.txt  README.md  说明.md
